--- a/README.nb
+++ b/README.nb
@@ -58,7 +58,7 @@ Cell["Now load the package:", \
 Cell[BoxData[
  RowBox[{"<<", " ", "CysteineScreen`"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[3]:=",ExpressionUUID->"f47db6ac-22b0-4e6e-a903-316c9d2a1354"],
+ CellLabel->"In[2]:=",ExpressionUUID->"f47db6ac-22b0-4e6e-a903-316c9d2a1354"],
 
 Cell["The package exposes a single function:", \
 "Text",ExpressionUUID->"104737c9-3ee2-4fe7-9b24-4f899dcc520b"],
@@ -68,14 +68,14 @@ Cell[CellGroupData[{
 Cell[BoxData[
  RowBox[{"?", " ", "\"\<CysteineScreen`*\>\""}]], "Code",
  InitializationCell->False,
- CellLabel->"In[4]:=",ExpressionUUID->"fbf97999-6e4c-4231-aa43-a79f276e923a"],
+ CellLabel->"In[3]:=",ExpressionUUID->"fbf97999-6e4c-4231-aa43-a79f276e923a"],
 
 Cell[BoxData["\<\"mutagenesisPrimerPair[\\\"cds\\\", res, codon] gives PCR \
 primers for mutagenesis of a residue using a specified codon.\"\>"], "Print", \
 "PrintUsage",
  CellTags->
-  "Info43744049386-9943034",ExpressionUUID->"36987189-b3ca-43c1-b05b-\
-47c226b80d09"]
+  "Info33744054979-4052257",ExpressionUUID->"b6ccd879-3202-4180-8df7-\
+dd18b20f9a2b"]
 }, Open  ]]
 }, Open  ]],
 
@@ -122,8 +122,8 @@ want to mutate to cysteine. We will target residues in the Smc coiled-coil \
 arm. The arm is an antiparallel intramolecular coiled coil, which means that \
 it is comprised of an N-terminal and a C-terminal helix that follow the \
 canonical heptad repeat pattern of coiled coils. We will mutagenize the \
-residues that do not mediate a contact between the helices, i.e. they are not \
-at the ",
+residues that do not mediate a contact between the helices, i.e. which are \
+not at the ",
  StyleBox["a",
   FontWeight->"Bold"],
  " and ",
@@ -146,37 +146,38 @@ Cell[BoxData[
    "\[IndentingNewLine]", "  ", 
    RowBox[{"With", "[", "\[IndentingNewLine]", "    ", 
     RowBox[{
-     RowBox[{"{", 
-      RowBox[{"hpos", " ", "=", " ", 
-       RowBox[{"FirstPosition", "[", 
-        RowBox[{
-         RowBox[{"CharacterRange", "[", 
-          RowBox[{"\"\<a\>\"", ",", " ", "\"\<g\>\""}], "]"}], ",", " ", 
-         "heptad"}], "]"}]}], "}"}], "\[IndentingNewLine]", "    ", ",", 
-     "\[IndentingNewLine]", "    ", 
+     RowBox[{"{", "\n", "      ", 
+      RowBox[{
+       RowBox[{"residues", " ", "=", " ", 
+        RowBox[{"Range", "[", 
+         RowBox[{"start", ",", " ", "stop"}], "]"}]}], ",", "\n", "      ", 
+       RowBox[{"hpos", " ", "=", " ", 
+        RowBox[{"FirstPosition", "[", 
+         RowBox[{
+          RowBox[{"CharacterRange", "[", 
+           RowBox[{"\"\<a\>\"", ",", " ", "\"\<g\>\""}], "]"}], ",", " ", 
+          "heptad"}], "]"}]}]}], "\n", "    ", "}"}], "\[IndentingNewLine]", 
+     "    ", ",", "\[IndentingNewLine]", "    ", 
      RowBox[{
       RowBox[{"Riffle", "[", "\n", "      ", 
-       RowBox[{
-        RowBox[{"Range", "[", 
-         RowBox[{"start", ",", " ", "stop"}], "]"}], ",", " ", "\n", "      ", 
+       RowBox[{"residues", ",", "\n", "      ", 
         RowBox[{"RotateLeft", "[", 
          RowBox[{
           RowBox[{"CharacterRange", "[", 
            RowBox[{"\"\<a\>\"", ",", " ", "\"\<g\>\""}], "]"}], ",", " ", 
-          RowBox[{"hpos", " ", "-", " ", "1"}]}], "]"}], ",", "\n", "      ", 
+          RowBox[{"hpos", " ", "-", " ", "1"}]}], "]"}], ",", " ", "\n", 
+        "      ", 
         RowBox[{"{", 
          RowBox[{"2", ",", " ", 
           RowBox[{"2", " ", "*", " ", 
-           RowBox[{"(", 
-            RowBox[{"stop", " ", "-", " ", "start", " ", "+", " ", "1"}], 
-            ")"}]}], ",", " ", "2"}], "}"}]}], "\n", "     ", "]"}], "\n", 
-      "       ", "//", " ", 
+           RowBox[{"Length", "@", "residues"}]}], ",", " ", "2"}], "}"}]}], 
+       "\n", "     ", "]"}], "\n", "       ", "//", " ", 
       RowBox[{
        RowBox[{"Partition", "[", 
         RowBox[{"#", ",", " ", "2"}], "]"}], "&"}]}]}], "\[IndentingNewLine]",
      "  ", "]"}]}], ";"}]], "Code",
- InitializationCell->False,
- CellLabel->"In[5]:=",ExpressionUUID->"2d74fa04-0de2-45e0-8497-2b43e8c3d9a8"],
+ InitializationCell->
+  False,ExpressionUUID->"2d74fa04-0de2-45e0-8497-2b43e8c3d9a8"],
 
 Cell["\<\
 We use this function and knowledge about the coiled-coil register to assign \
@@ -208,7 +209,7 @@ Cell[BoxData[
        RowBox[{"990", ",", " ", "1025", ",", " ", "\"\<d\>\""}], "]"}]}], 
      "\[IndentingNewLine]", "  ", "}"}]}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[6]:=",ExpressionUUID->"a1edc7d7-4723-42bc-afcc-aa40e57a9e5a"],
+ CellLabel->"In[5]:=",ExpressionUUID->"a1edc7d7-4723-42bc-afcc-aa40e57a9e5a"],
 
 Cell[TextData[{
  "Now we use pattern matching to select residues that are not at positions ",
@@ -236,7 +237,7 @@ Cell[BoxData[
         RowBox[{"res_Integer", ",", " ", "_"}], "}"}], " ", ":>", " ", 
        "res"}]}], "}"}]}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[7]:=",ExpressionUUID->"785b3229-cf24-49a8-a2d0-2b6e87e97e41"]
+ CellLabel->"In[6]:=",ExpressionUUID->"785b3229-cf24-49a8-a2d0-2b6e87e97e41"]
 }, Open  ]],
 
 Cell[CellGroupData[{
@@ -311,7 +312,7 @@ Cell[BoxData[
         "\"\<ExampleData\>\"", ",", " ", "\"\<BsSmc_cysless.txt\>\""}], "}"}],
        "]"}], ",", " ", "\"\<Text\>\""}], "]"}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[8]:=",ExpressionUUID->"3c267b9b-e795-45e5-8f95-b33c6e8d6a48"],
+ CellLabel->"In[7]:=",ExpressionUUID->"3c267b9b-e795-45e5-8f95-b33c6e8d6a48"],
 
 Cell["Now we construct primers for the target residues:", \
 "Text",ExpressionUUID->"464f8467-7690-4439-b579-dea228d35d92"],
@@ -325,7 +326,7 @@ Cell[BoxData[
       RowBox[{"smc", ",", " ", "#", ",", " ", "\"\<TGC\>\""}], "]"}], "&"}], 
     " ", "/@", " ", "targets"}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[9]:=",ExpressionUUID->"289c0148-2623-485a-b017-bcdf565025b1"],
+ CellLabel->"In[8]:=",ExpressionUUID->"289c0148-2623-485a-b017-bcdf565025b1"],
 
 Cell[TextData[{
  "The primers are still missing the ",
@@ -358,7 +359,7 @@ Cell[BoxData[{
       RowBox[{"All", ",", " ", "\"\<Rev\>\""}], "]"}], "]"}]}]}], 
   ";"}]}], "Code",
  InitializationCell->False,
- CellLabel->"In[10]:=",ExpressionUUID->"ab86683a-298b-4c6d-bf57-59d1439dd20f"]
+ CellLabel->"In[9]:=",ExpressionUUID->"ab86683a-298b-4c6d-bf57-59d1439dd20f"]
 }, Open  ]],
 
 Cell[CellGroupData[{
@@ -389,11 +390,13 @@ Cell[BoxData[{
        RowBox[{"ToString", "@", "#"}]}], "]"}], "&"}], " ", "/@", " ", 
     "targets"}]}], ";"}]}], "Code",
  InitializationCell->False,
- CellLabel->"In[12]:=",ExpressionUUID->"1fb38689-4b7c-4e5e-9490-18f34ef7aad5"],
+ CellLabel->"In[11]:=",ExpressionUUID->"1fb38689-4b7c-4e5e-9490-18f34ef7aad5"],
 
 Cell["\<\
 Construct a table of name/sequence pairs and export as a spreadsheet:\
 \>", "Text",ExpressionUUID->"8d6ba3f6-40a2-46db-859e-920308184471"],
+
+Cell[CellGroupData[{
 
 Cell[BoxData[
  RowBox[{"Export", "[", "\[IndentingNewLine]", "  ", 
@@ -418,14 +421,19 @@ Cell[BoxData[
      "\[IndentingNewLine]", "    ", "}"}]}], "\[IndentingNewLine]", "    ", 
    ",", " ", "\"\<Rules\>\""}], "\[IndentingNewLine]", "]"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[14]:=",ExpressionUUID->"c6ec53a4-de86-4256-8302-fbeacf1fd9a1"],
+ CellLabel->"In[13]:=",ExpressionUUID->"c6ec53a4-de86-4256-8302-fbeacf1fd9a1"],
+
+Cell[BoxData["\<\"C:\\\\Users\\\\Frank\\\\CysteineScreenPrimers.xlsx\"\>"], \
+"Output",
+ CellLabel->"Out[13]=",ExpressionUUID->"a61f6c05-f21d-4b16-8b37-044b0263103e"]
+}, Open  ]],
 
 Cell["Open the file and have a look:", \
 "Text",ExpressionUUID->"85a44301-f0d6-4f7b-b0e5-ff05580718a9"],
 
 Cell[BoxData[
  RowBox[{"SystemOpen", "@", "%"}]], "Input",
- CellLabel->"In[15]:=",ExpressionUUID->"85c4a077-b3df-4abc-bd6a-d345927fd7f6"]
+ CellLabel->"In[14]:=",ExpressionUUID->"85c4a077-b3df-4abc-bd6a-d345927fd7f6"]
 }, Open  ]]
 }, Open  ]]
 },
