--- a/README.nb
+++ b/README.nb
@@ -58,7 +58,7 @@ Cell["Now load the package:", \
 Cell[BoxData[
  RowBox[{"<<", " ", "CysteineScreen`"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[2]:=",ExpressionUUID->"f47db6ac-22b0-4e6e-a903-316c9d2a1354"],
+ CellLabel->"In[1]:=",ExpressionUUID->"f47db6ac-22b0-4e6e-a903-316c9d2a1354"],
 
 Cell["The package exposes a single function:", \
 "Text",ExpressionUUID->"104737c9-3ee2-4fe7-9b24-4f899dcc520b"],
@@ -68,14 +68,14 @@ Cell[CellGroupData[{
 Cell[BoxData[
  RowBox[{"?", " ", "\"\<CysteineScreen`*\>\""}]], "Code",
  InitializationCell->False,
- CellLabel->"In[3]:=",ExpressionUUID->"fbf97999-6e4c-4231-aa43-a79f276e923a"],
+ CellLabel->"In[2]:=",ExpressionUUID->"fbf97999-6e4c-4231-aa43-a79f276e923a"],
 
-Cell[BoxData["\<\"mutagenesisPrimerPair[\\\"cds\\\", res, codon] gives PCR \
-primers for mutagenesis of a residue using a specified codon.\"\>"], "Print", \
+Cell[BoxData["\<\"makePrimerPair[\\\"cds\\\", res, codon] gives PCR primers \
+for mutagenesis of a residue using a specified codon.\"\>"], "Print", \
 "PrintUsage",
  CellTags->
-  "Info33744054979-4052257",ExpressionUUID->"b6ccd879-3202-4180-8df7-\
-dd18b20f9a2b"]
+  "Info23744056536-9777638",ExpressionUUID->"1d87ac9a-fa89-40d1-ba6e-\
+541b15d7d368"]
 }, Open  ]]
 }, Open  ]],
 
@@ -142,8 +142,8 @@ Cell[BoxData[
  RowBox[{
   RowBox[{
    RowBox[{"heptadTable", "[", 
-    RowBox[{"start_", ",", " ", "stop_", ",", " ", "heptad_"}], "]"}], ":=", 
-   "\[IndentingNewLine]", "  ", 
+    RowBox[{"start_", ",", " ", "stop_", ",", " ", "heptad_"}], "]"}], " ", ":=",
+    "\[IndentingNewLine]", "  ", 
    RowBox[{"With", "[", "\[IndentingNewLine]", "    ", 
     RowBox[{
      RowBox[{"{", "\n", "      ", 
@@ -187,29 +187,28 @@ heptad positions to Smc residues:\
 Cell[BoxData[
  RowBox[{
   RowBox[{"heptadPositions", " ", "=", " ", "\[IndentingNewLine]", "  ", 
-   RowBox[{"Join", "@@", 
-    RowBox[{"{", "\[IndentingNewLine]", "    ", 
-     RowBox[{
-      RowBox[{"heptadTable", "[", 
-       RowBox[{"174", ",", " ", "209", ",", " ", "\"\<a\>\""}], "]"}], ",", 
-      "\[IndentingNewLine]", "    ", 
-      RowBox[{"heptadTable", "[", 
-       RowBox[{"227", ",", " ", "381", ",", " ", "\"\<a\>\""}], "]"}], ",", 
-      "\[IndentingNewLine]", "    ", 
-      RowBox[{"heptadTable", "[", 
-       RowBox[{"395", ",", " ", "493", ",", " ", "\"\<d\>\""}], "]"}], ",", 
-      "\[IndentingNewLine]", "    ", 
-      RowBox[{"heptadTable", "[", 
-       RowBox[{"679", ",", " ", "777", ",", " ", "\"\<a\>\""}], "]"}], ",", 
-      "\[IndentingNewLine]", "    ", 
-      RowBox[{"heptadTable", "[", 
-       RowBox[{"794", ",", " ", "948", ",", " ", "\"\<d\>\""}], "]"}], ",", 
-      "\[IndentingNewLine]", "    ", 
-      RowBox[{"heptadTable", "[", 
-       RowBox[{"990", ",", " ", "1025", ",", " ", "\"\<d\>\""}], "]"}]}], 
-     "\[IndentingNewLine]", "  ", "}"}]}]}], ";"}]], "Code",
- InitializationCell->False,
- CellLabel->"In[5]:=",ExpressionUUID->"a1edc7d7-4723-42bc-afcc-aa40e57a9e5a"],
+   RowBox[{"Join", "[", "\[IndentingNewLine]", "    ", 
+    RowBox[{
+     RowBox[{"heptadTable", "[", 
+      RowBox[{"174", ",", " ", "209", ",", " ", "\"\<a\>\""}], "]"}], ",", 
+     "\[IndentingNewLine]", "    ", 
+     RowBox[{"heptadTable", "[", 
+      RowBox[{"227", ",", " ", "381", ",", " ", "\"\<a\>\""}], "]"}], ",", 
+     "\[IndentingNewLine]", "    ", 
+     RowBox[{"heptadTable", "[", 
+      RowBox[{"395", ",", " ", "493", ",", " ", "\"\<d\>\""}], "]"}], ",", 
+     "\[IndentingNewLine]", "    ", 
+     RowBox[{"heptadTable", "[", 
+      RowBox[{"679", ",", " ", "777", ",", " ", "\"\<a\>\""}], "]"}], ",", 
+     "\[IndentingNewLine]", "    ", 
+     RowBox[{"heptadTable", "[", 
+      RowBox[{"794", ",", " ", "948", ",", " ", "\"\<d\>\""}], "]"}], ",", 
+     "\[IndentingNewLine]", "    ", 
+     RowBox[{"heptadTable", "[", 
+      RowBox[{"990", ",", " ", "1025", ",", " ", "\"\<d\>\""}], "]"}]}], 
+    "\[IndentingNewLine]", "  ", "]"}]}], ";"}]], "Code",
+ InitializationCell->
+  False,ExpressionUUID->"a1edc7d7-4723-42bc-afcc-aa40e57a9e5a"],
 
 Cell[TextData[{
  "Now we use pattern matching to select residues that are not at positions ",
@@ -237,7 +236,7 @@ Cell[BoxData[
         RowBox[{"res_Integer", ",", " ", "_"}], "}"}], " ", ":>", " ", 
        "res"}]}], "}"}]}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[6]:=",ExpressionUUID->"785b3229-cf24-49a8-a2d0-2b6e87e97e41"]
+ CellLabel->"In[5]:=",ExpressionUUID->"785b3229-cf24-49a8-a2d0-2b6e87e97e41"]
 }, Open  ]],
 
 Cell[CellGroupData[{
@@ -247,7 +246,7 @@ Cell["Automated design of the variable primers", \
 
 Cell[TextData[{
  "We make use of the ",
- StyleBox["mutagenesisPrimerPair",
+ StyleBox["makePrimerPair",
   FontWeight->"Bold"],
  " function from the ",
  StyleBox["CysteineScreen",
@@ -261,7 +260,7 @@ mutation. The function does not add ",
  StyleBox["Bsa",
   FontSlant->"Italic"],
  "I restriction sites, so we need to take care of this.\n\nThe ",
- StyleBox["mutagenesisPrimerPair",
+ StyleBox["makePrimerPair",
   FontWeight->"Bold"],
  " function adheres to the following rules:"
 }], "Text",ExpressionUUID->"d555b18c-d7df-4872-8bea-5d76832b3f9e"],
@@ -312,7 +311,7 @@ Cell[BoxData[
         "\"\<ExampleData\>\"", ",", " ", "\"\<BsSmc_cysless.txt\>\""}], "}"}],
        "]"}], ",", " ", "\"\<Text\>\""}], "]"}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[7]:=",ExpressionUUID->"3c267b9b-e795-45e5-8f95-b33c6e8d6a48"],
+ CellLabel->"In[6]:=",ExpressionUUID->"3c267b9b-e795-45e5-8f95-b33c6e8d6a48"],
 
 Cell["Now we construct primers for the target residues:", \
 "Text",ExpressionUUID->"464f8467-7690-4439-b579-dea228d35d92"],
@@ -322,11 +321,11 @@ Cell[BoxData[
   RowBox[{"primers", " ", "=", " ", 
    RowBox[{
     RowBox[{
-     RowBox[{"mutagenesisPrimerPair", "[", 
+     RowBox[{"makePrimerPair", "[", 
       RowBox[{"smc", ",", " ", "#", ",", " ", "\"\<TGC\>\""}], "]"}], "&"}], 
     " ", "/@", " ", "targets"}]}], ";"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[8]:=",ExpressionUUID->"289c0148-2623-485a-b017-bcdf565025b1"],
+ CellLabel->"In[7]:=",ExpressionUUID->"289c0148-2623-485a-b017-bcdf565025b1"],
 
 Cell[TextData[{
  "The primers are still missing the ",
@@ -359,7 +358,7 @@ Cell[BoxData[{
       RowBox[{"All", ",", " ", "\"\<Rev\>\""}], "]"}], "]"}]}]}], 
   ";"}]}], "Code",
  InitializationCell->False,
- CellLabel->"In[9]:=",ExpressionUUID->"ab86683a-298b-4c6d-bf57-59d1439dd20f"]
+ CellLabel->"In[8]:=",ExpressionUUID->"ab86683a-298b-4c6d-bf57-59d1439dd20f"]
 }, Open  ]],
 
 Cell[CellGroupData[{
@@ -390,13 +389,11 @@ Cell[BoxData[{
        RowBox[{"ToString", "@", "#"}]}], "]"}], "&"}], " ", "/@", " ", 
     "targets"}]}], ";"}]}], "Code",
  InitializationCell->False,
- CellLabel->"In[11]:=",ExpressionUUID->"1fb38689-4b7c-4e5e-9490-18f34ef7aad5"],
+ CellLabel->"In[10]:=",ExpressionUUID->"1fb38689-4b7c-4e5e-9490-18f34ef7aad5"],
 
 Cell["\<\
 Construct a table of name/sequence pairs and export as a spreadsheet:\
 \>", "Text",ExpressionUUID->"8d6ba3f6-40a2-46db-859e-920308184471"],
-
-Cell[CellGroupData[{
 
 Cell[BoxData[
  RowBox[{"Export", "[", "\[IndentingNewLine]", "  ", 
@@ -421,19 +418,14 @@ Cell[BoxData[
      "\[IndentingNewLine]", "    ", "}"}]}], "\[IndentingNewLine]", "    ", 
    ",", " ", "\"\<Rules\>\""}], "\[IndentingNewLine]", "]"}]], "Code",
  InitializationCell->False,
- CellLabel->"In[13]:=",ExpressionUUID->"c6ec53a4-de86-4256-8302-fbeacf1fd9a1"],
-
-Cell[BoxData["\<\"C:\\\\Users\\\\Frank\\\\CysteineScreenPrimers.xlsx\"\>"], \
-"Output",
- CellLabel->"Out[13]=",ExpressionUUID->"a61f6c05-f21d-4b16-8b37-044b0263103e"]
-}, Open  ]],
+ CellLabel->"In[12]:=",ExpressionUUID->"c6ec53a4-de86-4256-8302-fbeacf1fd9a1"],
 
 Cell["Open the file and have a look:", \
 "Text",ExpressionUUID->"85a44301-f0d6-4f7b-b0e5-ff05580718a9"],
 
 Cell[BoxData[
  RowBox[{"SystemOpen", "@", "%"}]], "Input",
- CellLabel->"In[14]:=",ExpressionUUID->"85c4a077-b3df-4abc-bd6a-d345927fd7f6"]
+ CellLabel->"In[13]:=",ExpressionUUID->"85c4a077-b3df-4abc-bd6a-d345927fd7f6"]
 }, Open  ]]
 }, Open  ]]
 },
